tests/baselines/reference/decoratorOnClassMethod8(target=es5).errors.txt
decoratorOnClassMethod8.ts(4,6): error TS1241: Unable to resolve signature of method decorator when called as an expression.
  The runtime will invoke the decorator with 3 arguments, but the decorator expects 1.
decoratorOnClassMethod8.ts(4,6): error TS1270: Decorator function return type 'C' is not assignable to type 'void | TypedPropertyDescriptor<() => void>'.


==== decoratorOnClassMethod8.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    class C {
        @dec method() {}
         ~~~
!!! error TS1241: Unable to resolve signature of method decorator when called as an expression.
!!! error TS1241:   The runtime will invoke the decorator with 3 arguments, but the decorator expects 1.
         ~~~
!!! error TS1270: Decorator function return type 'C' is not assignable to type 'void | TypedPropertyDescriptor<() => void>'.
    }